updated dependencies version